# media-test

./: .gitignore  Cargo.toml  H264-PLAYBACK-FIX-V2.md  H264-WEBCODECS-SOLUTION.md  LATENCY_MONITORING_COMPLETE.md  LATENCY_MONITORING_TEST_GUIDE.md  PLAYBACK-FIX-SUMMARY.md  README.md  SCRIPTS-GUIDE.md  SCRIPTS-README.md  SCRIPTS-SUMMARY.md  START-HERE.md  VIDEO-FORMAT-GUIDE.md  generate-test-h264.ps1  quick-test-setup.ps1  rebuild-and-restart.ps1  restart-after-fix.ps1  run-full-test.ps1  setup-ffmpeg-windows.ps1  setup-permissions.sh  start-all-simple.ps1  start-debug.ps1  start-debug.sh  start-device.ps1  start-device.sh  start-release.ps1  start-release.sh  start-services.ps1  stop-all.ps1  stop-all.sh  test-latency-monitoring-fix.ps1  test-live-streaming.ps1  test-playback.ps1  test-webcodecs-support.html  延迟监控修复总结.md  延迟监控问题分析.md  直通播放测试结果.md
.kiro/specs/device-uploader-merge/: design.md  live-screen-capture-design.md  live-screen-capture-requirements.md  platform-frontend-adjustments.md  requirements.md  tasks.md
common/: Cargo.toml
common/src/: error.rs  lib.rs  protocol.rs  types.rs  utils.rs
device-simulator/: Cargo.toml  KEYFRAME_INDEX.md  MERGE_SUMMARY.md  PLAYBACK_CONTROL.md  README.md  TIMELINE_CACHE.md
device-simulator/src/: config.rs  device_service.rs  lib.rs  main.rs
device-simulator/src/quic/: client.rs  mod.rs
device-simulator/src/uploader/: uploader.rs
device-simulator/src/video/: TASK1_COMPLETION.md  controller.rs  errors.rs  ffmpeg_parser.rs  file_reader.rs  h264_encoder.rs  live_stream_generator.rs  live_stream_generator_file.rs  live_stream_generator_mock.rs  mod.rs  reader.rs  screen_capture.rs  timeline.rs  types.rs  types_test.rs
device-uploader/: Cargo.toml  PLATFORM_INTEGRATION_PROTOCOL.md  README.md  USAGE.md
device-uploader/proptest-regressions/: file_reader.txt
device-uploader/src/: app.rs  config.rs  controller.rs  controller_test.rs  error_handling_integration_test.rs  errors.rs  ffmpeg_cli_parser.rs  file_reader.rs  h264_encoder.rs  lib.rs  live_encoder.rs  main.rs  mock_server.rs  monitor.rs  monitor_test.rs  network_error_handler.rs  on_demand_uploader.rs  resource_monitor.rs  seek_integration_test.rs  segmenter.rs  separator.rs  serde_helpers.rs  timeline_manager.rs  transmission_config.rs  transport.rs  transport_test.rs  types.rs  upload_manager.rs
device-uploader/test_videos/: sample1.timeline  sample_30fps.timeline  sample_60fps.timeline  sample_60fps_audio.timeline  sample_720p_30fps.timeline  sample_720p_60fps.timeline
docs/: README.md  文档整理说明.md  文档结构说明.md  脚本使用指南.md
docs/examples/: README.md  test-stream-api.sh  unified-stream-example.html
docs/安装指南/: Rust安装指南.md
docs/开发指南/: 代码实现指南.md  代码实现补充清单.md
docs/快速开始/: 快速开始指南.md
docs/技术实现/: MSE播放器实现方案.md  任务完成总结.md  回放功能实现总结.md  时钟同步精度分析.md  直通播放实现方案.md  统一低延迟流API使用文档.md  视频播放功能实现.md
docs/故障排查/: 常见问题解决.md  编译问题修复指南.md
docs/测试指南/: 测试执行指南.md
docs/系统文档/: API接口文档.md  开发手册.md  系统架构设计文档.md  部署指南.md
docs/项目状态/: 当前系统状态.md  文档生成总结.md
platform-server/: Cargo.toml  LATENCY_INTEGRATION_COMPLETE.md  LATENCY_INTEGRATION_TASKS.md  start-release.ps1
platform-server/src/: config.rs  main.rs
platform-server/src/device/: manager.rs  mod.rs  registry.rs
platform-server/src/distribution/: manager.rs  mod.rs
platform-server/src/http3/: handlers.rs  latency_handlers.rs  mod.rs  routes.rs  server.rs  sse.rs  streaming.rs
platform-server/src/latency/: IMPLEMENTATION_SUMMARY.md  README.md  alert_broadcaster.rs  end_to_end_monitor.rs  integration_example.rs  mod.rs  monitor.rs  statistics.rs
platform-server/src/protocol/: converter.rs  mod.rs
platform-server/src/quic/: connection.rs  mod.rs  server.rs
platform-server/src/recording/: manager.rs  mod.rs  scanner.rs
platform-server/src/streaming/: error.rs  file_reader.rs  fmp4_converter.rs  handler.rs  live_source.rs  mod.rs  playback_source.rs  source.rs
platform-server/src/streaming/framerate/: detector.rs  mod.rs  pacer.rs  timestamp.rs
web-frontend/: index.html  package-lock.json  package.json  vite.config.ts
web-frontend/src/: App.css  App.tsx  config.ts  index.css
(+30 files in other folders)
