[workspace]
members = [
    "platform-server",
    "device-simulator",
    "common",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["Video Streaming Team <team@example.com>"]
license = "MIT"

[workspace.dependencies]
# QUIC相关
quinn = "0.10"
rustls = "0.21"
rcgen = "0.11"

# HTTP3相关
h3 = "0.0.3"
h3-quinn = "0.0.4"

# 异步运行时
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# Web框架
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 其他工具
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.5"
futures = "0.3"
dashmap = "5.5"
async-trait = "0.1"
