[package]
name = "device-simulator"
version.workspace = true
edition.workspace = true

[dependencies]
# 工作空间依赖
quinn.workspace = true
rustls = { workspace = true, features = ["dangerous_configuration"] }
rcgen.workspace = true
tokio.workspace = true
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
bytes.workspace = true
futures.workspace = true

# 本地依赖
common = { path = "../common" }

# 视频处理
walkdir = "2.4"

# 屏幕捕获和编码（暂时注释以使用模拟数据）
# scrap = "0.5"
# ffmpeg-next = "6.0"
# image = "0.24"
