[package]
name = "platform-server"
version.workspace = true
edition.workspace = true

[dependencies]
# 工作空间依赖
quinn.workspace = true
h3.workspace = true
h3-quinn.workspace = true
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
bytes.workspace = true
futures.workspace = true
dashmap.workspace = true
async-trait.workspace = true

# 本地依赖
common = { path = "../common" }

# 特定依赖
rustls.workspace = true
rcgen.workspace = true
tokio-util = { workspace = true, features = ["io"] }
lru = "0.12"
walkdir = "2.4"
tokio-stream = { version = "0.1", features = ["sync"] }
async-stream = "0.3"
base64 = "0.21"

[dev-dependencies]
tempfile = "3.8"
